[bugfix/Chore] Plugins: Fix the bug that localization and the description can't see form latest information. Add gap between labels and controller component.

--- a/src-ui/app/config_page/setting_section/setting_box/advanced_settings/plugins/Plugins.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/advanced_settings/plugins/Plugins.module.scss
@@ -16,6 +16,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
+    gap: 2rem;
     &:not(:last-child) {
         border-bottom: 0.1rem solid var(--dark_750_color);
     }
